force-app/main/default/objects/SMS_DataArchive_FilterCriteria__c/SMS_DataArchive_FilterCriteria__c.object-meta.xml
<CustomObject>
    <label>SMS_DataArchive_FilterCriteria</label>
    <nameField>
        <label>SMS_DataArchive_FilterCriteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS_DataArchive_FilterCriteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>