force-app/main/default/objects/SMS_DataArchive_FilterCriteria__c/fields/CriteriaDescription__c.field-meta.xml
<CustomField>
    <fullName>CriteriaDescription__c</fullName>
    <label>CriteriaDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>