force-app/main/default/objects/SMS_DataArchive_FilterCriteria__c/fields/Next_Fire_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Fire_Time__c</fullName>
    <label>Next Fire Time</label>
    <type>DateTime</type>
</CustomField>