force-app/main/default/objects/SMS_DataArchive_FilterCriteria__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <label>Query</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>