force-app/main/default/objects/SMS_DataArchive_FilterCriteria__c/fields/ReadableQuery__c.field-meta.xml
<CustomField>
    <fullName>ReadableQuery__c</fullName>
    <label>ReadableQuery</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>