force-app/main/default/objects/SMS_DataArchive_FilterCriteria__c/fields/Schedule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Start_Date__c</fullName>
    <label>Schedule Start Date</label>
    <type>Date</type>
</CustomField>