force-app/main/default/objects/SMS_DataArchive_FilterCriteria__c/fields/Scheduled_JSON__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_JSON__c</fullName>
    <label>Scheduled JSON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>