force-app/main/default/objects/SMS_DataArchive_FilterCriteria__c/fields/ScheduledJobName__c.field-meta.xml
<CustomField>
    <fullName>ScheduledJobName__c</fullName>
    <label>ScheduledJobName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>