force-app/main/default/objects/SMS_DataArchive_FilterCriteria__c/fields/ScheduledTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledTime__c</fullName>
    <label>ScheduledTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>