force-app/main/default/objects/SMS_DataArchive_FilterCriteria__c/fields/ScheduleJobId__c.field-meta.xml
<CustomField>
    <fullName>ScheduleJobId__c</fullName>
    <label>ScheduleJobId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>