force-app/main/default/objects/SMS_DataArchive_FilterCriteria__c/fields/SMS_DataArchive_Configurations__c.field-meta.xml
<CustomField>
    <fullName>SMS_DataArchive_Configurations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS_DataArchive_Configurations</label>
    <referenceTo>SMS_DataArchive_Configurations__c</referenceTo>
    <relationshipLabel>SMS_DataArchive_FilterCriteria</relationshipLabel>
    <relationshipName>SMS_DataArchive_FilterCriteria</relationshipName>
    <type>Lookup</type>
</CustomField>